[package]
name = "seafloor"
version = "0.1.0"
authors = ["Jin <bluevortex002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
#async-tls = "0.11.0"
#async-std = "1.9.0"
futures = "0.3.13"
async-dup = "1.2.2"
async-h1 = "2.3.2"
http-types = "2.10.0"
regex = "1.4.5"
evmap = "10.0.2"